--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,16 +6,16 @@
         🔥 在左侧导航中点击任意【节点】来查看内容模型，通过【鼠标右键】获得更多操作，以下为内容生成器主要支持类型：
       </p>
       <div>
-        <!--        <ul style="list-style: none">-->
-        <!--          <li> <i nz-icon nzType="database" nzTheme="twotone"></i>【数据集】创建数据集合，生成表格、表单等； </li>-->
-        <!--          <li>-->
-        <!--            <i nz-icon nzType="calculator" nzTheme="twotone"> </i-->
-        <!--            >【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；-->
-        <!--          </li>-->
-        <!--          <li><i nz-icon nzType="code" nzTheme="twotone"></i>【自定义】通过编程自定义的页面；</li>-->
-        <!--          <li><i nz-icon nzType="folder" nzTheme="twotone"></i>【导航分组】导航中的分组，只做显示；</li>-->
-        <!--          <li><i nz-icon nzType="stop" nzTheme="twotone" [nzTwotoneColor]="'#ff7875'"></i>【停用】状态未启用。</li>-->
-        <!--        </ul>-->
+        <ul style="list-style: none">
+          <li> <i nz-icon nzType="database" nzTheme="twotone"></i>【数据集】创建数据集合，生成表格、表单等； </li>
+          <li>
+            <i nz-icon nzType="calculator" nzTheme="twotone"> </i
+            >【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；
+          </li>
+          <li><i nz-icon nzType="code" nzTheme="twotone"></i>【自定义】通过编程自定义的页面；</li>
+          <li><i nz-icon nzType="folder" nzTheme="twotone"></i>【导航分组】导航中的分组，只做显示；</li>
+          <li><i nz-icon nzType="stop" nzTheme="twotone" [nzTwotoneColor]="'#ff7875'"></i>【停用】状态未启用。</li>
+        </ul>
       </div>
     </div>
   </nz-result>
