--- a/src/app/pages/schema/schema.component.html
+++ b/src/app/pages/schema/schema.component.html
@@ -2,7 +2,7 @@
   <button nz-button nzType="primary" (click)="form()"> 新增 </button>
 </ng-template>
 
-<nz-card [nzExtra]="extra">
+<app-pages-tabs [id]="id" [extra]="extra">
   <nz-table
     #contentTable
     [nzData]="fields"
@@ -74,4 +74,4 @@
       </tr>
     </tbody>
   </nz-table>
-</nz-card>
+</app-pages-tabs>
