--- a/src/app/pages/schema/schema.component.html
+++ b/src/app/pages/schema/schema.component.html
@@ -1,5 +1,8 @@
 <ng-template #extra>
-  <button nz-button nzType="primary" (click)="form()"> 新增 </button>
+  <nz-space>
+    <button *nzSpaceItem nz-button nzType="primary"> 更新 </button>
+    <button *nzSpaceItem nz-button nzType="primary" (click)="form()"> 新增 </button>
+  </nz-space>
 </ng-template>
 
 <app-pages-tabs [id]="id" [extra]="extra">
