--- a/src/app/pages/schema/schema.component.scss
+++ b/src/app/pages/schema/schema.component.scss
@@ -5,10 +5,21 @@
   }
 }
 
-::ng-deep .cdk-drag-preview {
+.cdk-drag-preview {
   display: table;
+  box-sizing: border-box;
+  td {
+    background: transparent;
+  }
 }
 
-::ng-deep .cdk-drag-placeholder {
-  opacity: 0;
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.placeholder {
+  height: 40px;
+  background: #fafafa;
+  border: dashed 1px #40a9ff;
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
