--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -14,7 +14,7 @@
       </ul>
     </app-header>
     <nz-layout class="frame nested" style="overflow: hidden">
-      <nz-sider nzTheme="light" [nzWidth]="320">
+      <nz-sider nzTheme="light" [nzWidth]="320" (contextmenu)="actions($event, actionsMenu)">
         <nz-space>
           <nz-input-group *nzSpaceItem [nzPrefix]="suffixIconSearch" style="width: 180px">
             <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
@@ -22,12 +22,13 @@
               <span nz-icon nzType="search"></span>
             </ng-template>
           </nz-input-group>
+
           <nz-button-group *nzSpaceItem>
-            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
-              <i nz-icon nzType="reload"></i>
+            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+              <span nz-icon nzType="reload"></span>
             </button>
             <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">
-              <i nz-icon nzType="swap"></i>
+              <span nz-icon nzType="swap"></span>
             </button>
             <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
               <span nz-icon nzType="sisternode"></span>
@@ -37,7 +38,7 @@
 
         <nz-divider style="margin: 8px 0"></nz-divider>
 
-        <nz-tree-view [nzTreeControl]="control" [nzDataSource]="ds" nzBlockNode>
+        <nz-tree-view [nzTreeControl]="control" [nzDataSource]="ds">
           <nz-tree-node *nzTreeNodeDef="let node" nzTreeNodeIndentLine>
             <nz-tree-node-toggle nzTreeNodeNoopToggle>
               <ng-container *ngTemplateOutlet="icon; context: { $implicit: node }"></ng-container>
@@ -65,6 +66,7 @@
           </nz-tree-node>
         </nz-tree-view>
       </nz-sider>
+
       <nz-layout style="overflow: auto">
         <nz-content class="content">
           <router-outlet></router-outlet>
@@ -73,6 +75,13 @@
     </nz-layout>
   </nz-layout>
 </nz-layout>
+
+<nz-dropdown-menu #actionsMenu="nzDropdownMenu">
+  <ul nz-menu>
+    <li nz-menu-item (click)="control.expandAll()"><span> 全部展开 </span></li>
+    <li nz-menu-item (click)="control.collapseAll()"><span> 全部收起 </span></li>
+  </ul>
+</nz-dropdown-menu>
 
 <ng-template #icon let-node>
   <div class="custom-icon">
@@ -97,15 +106,15 @@
 </ng-template>
 
 <ng-template #content let-node>
-  <div class="custom-node" (contextmenu)="nodeActions($event, nodeActionsMenu, node)">
+  <div class="custom-node" (contextmenu)="actions($event, nodeActionsMenu, node)">
     <span *ngIf="node.icon" nz-icon [nzType]="node.icon"></span>
     {{ node.name }}
     <ng-container *ngIf="node.manifest">
       [
       <ng-container [ngSwitch]="node.manifest">
         <ng-container *ngSwitchCase="'default'"> 标准表格 </ng-container>
-        <ng-container *ngSwitchCase="'form'">独立表单</ng-container>
-        <ng-container *ngSwitchCase="'dashboard'">仪表盘</ng-container>
+        <ng-container *ngSwitchCase="'form'"> 独立表单 </ng-container>
+        <ng-container *ngSwitchCase="'dashboard'"> 仪表盘 </ng-container>
       </ng-container>
       ]
     </ng-container>
@@ -116,7 +125,6 @@
 <nz-dropdown-menu #nodeActionsMenu="nzDropdownMenu">
   <ul *ngIf="actionNode as node" nz-menu>
     <li nz-menu-item [nzSelected]="false">
-      <i *ngIf="node.icon" nz-icon [nzType]="node.icon"></i>&nbsp;
       <span>{{ node.name }}</span>
     </li>
     <li nz-menu-divider></li>
