--- a/src/app/orgs/departments/departments.component.html
+++ b/src/app/orgs/departments/departments.component.html
@@ -1,68 +1,94 @@
-<nz-row [nzGutter]="8">
-  <nz-col>
-    <nz-input-group [nzPrefix]="suffixIconSearch" style="width: 180px">
-      <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
-      <ng-template #suffixIconSearch>
-        <i nz-icon nzType="search"></i>
-      </ng-template>
-    </nz-input-group>
-  </nz-col>
-  <nz-col>
-    <nz-button-group>
-      <!--          <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">-->
-      <!--            <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>-->
-      <!--          </button>-->
-      <!--          <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">-->
-      <!--            <i nz-icon nzType="swap"></i>-->
-      <!--          </button>-->
-      <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
-        <i nz-icon nzType="ellipsis"></i>
-      </button>
-      <!--      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">-->
-      <!--        <i nz-icon nzType="reload"></i>-->
-      <!--      </button>-->
-    </nz-button-group>
-  </nz-col>
-</nz-row>
-<nz-divider style="margin: 8px 0"></nz-divider>
-<nz-tree
-  #tree
-  nzBlockNode
-  nzExpandAll
-  nzShowLine
-  [nzData]="nodes"
-  [nzSearchValue]="searchText"
-  [nzExpandedIcon]="nzExpandedIcon"
-  [nzTreeTemplate]="nzTreeTemplate"
-  [nzSelectedKeys]="selectedKeys"
-  (nzClick)="selected($event)"
-  (nzContextMenu)="actions($event, treeActions)"
->
-  <ng-template #nzExpandedIcon let-node>
-    <span class="custom-icon">
-      <i nz-icon [nzType]="!node.isExpanded && !node.isLeaf ? 'folder' : 'folder-open'" nzTheme="twotone"></i>
-    </span>
-  </ng-template>
-  <ng-template #nzTreeTemplate let-node let-origin="origin">
-    <span class="custom-node">
-      <span>{{ node.title }}</span>
-      <ng-container *ngIf="origin['description']">
-        <i nz-icon nzType="bulb" [nz-tooltip]="origin['description']"></i>
-      </ng-container>
-    </span>
-  </ng-template>
-  <nz-dropdown-menu #treeActions="nzDropdownMenu">
-    <ul *ngIf="actionId" nz-menu>
-      <ng-container *ngIf="departments.dict?.[actionId] as department">
-        <li nz-menu-item (click)="form(undefined, department._id)"> 新增 </li>
-        <li nz-menu-item (click)="form(department)"> 编辑 </li>
-        <li nz-menu-item nzDanger (click)="delete(department)"> 删除 </li>
-      </ng-container>
-    </ul>
-  </nz-dropdown-menu>
-</nz-tree>
+<nz-space>
+  <nz-input-group *nzSpaceItem [nzPrefix]="suffixIconSearch" style="width: 180px">
+    <input type="text" nz-input placeholder="搜索" ngModel (ngModelChange)="searchText$.next($event)" />
+    <ng-template #suffixIconSearch>
+      <span nz-icon nzType="search"></span>
+    </ng-template>
+  </nz-input-group>
 
-<nz-drawer nzTitle="拖拽进行重组" [nzVisible]="reorganizationVisible" (nzOnClose)="closeReorganization()">
+  <nz-button-group *nzSpaceItem>
+    <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+      <span nz-icon nzType="reload"></span>
+    </button>
+    <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">
+      <span nz-icon nzType="swap"></span>
+    </button>
+    <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
+      <span nz-icon nzType="sisternode"></span>
+    </button>
+  </nz-button-group>
+</nz-space>
+
+<nz-divider style="margin: 8px 0"></nz-divider>
+
+<nz-tree-view [nzTreeControl]="control" [nzDataSource]="ds">
+  <nz-tree-node *nzTreeNodeDef="let node" nzTreeNodeIndentLine>
+    <nz-tree-node-toggle nzTreeNodeNoopToggle>
+      <ng-container *ngTemplateOutlet="icon; context: { $implicit: node }"></ng-container>
+    </nz-tree-node-toggle>
+    <nz-tree-node-option
+      [nzDisabled]="node.disabled"
+      [nzSelected]="selection.isSelected(node._id)"
+      (nzClick)="selected(node)"
+    >
+      <ng-container *ngTemplateOutlet="content; context: { $implicit: node }"></ng-container>
+    </nz-tree-node-option>
+  </nz-tree-node>
+
+  <nz-tree-node *nzTreeNodeDef="let node; when: hasChild" nzTreeNodeIndentLine>
+    <nz-tree-node-toggle>
+      <ng-container *ngTemplateOutlet="icon; context: { $implicit: node }"></ng-container>
+    </nz-tree-node-toggle>
+    <nz-tree-node-option
+      [nzDisabled]="node.disabled"
+      [nzSelected]="selection.isSelected(node._id)"
+      (nzClick)="selected(node)"
+    >
+      <ng-container *ngTemplateOutlet="content; context: { $implicit: node }"></ng-container>
+    </nz-tree-node-option>
+  </nz-tree-node>
+</nz-tree-view>
+
+<nz-dropdown-menu #actionsMenu="nzDropdownMenu">
+  <ul nz-menu>
+    <li nz-menu-item (click)="control.expandAll()"><span> 全部展开 </span></li>
+    <li nz-menu-item (click)="control.collapseAll()"><span> 全部收起 </span></li>
+  </ul>
+</nz-dropdown-menu>
+
+<ng-template #icon let-node>
+  <div class="custom-icon">
+    <span nz-icon [nzType]="!control.isExpanded(node) ? 'folder' : 'folder-open'" nzTheme="twotone"></span>
+  </div>
+</ng-template>
+
+<ng-template #content let-node>
+  <div class="custom-node" (contextmenu)="actions($event, nodeActionsMenu, node)">
+    <span [innerHTML]="node.name | nzHighlight: (searchText$ | async)!:'i':'highlight'"></span>
+    <ng-container *ngIf="node.description">
+      <span nz-icon nzType="bulb" [nz-tooltip]="node.description"></span>
+    </ng-container>
+  </div>
+</ng-template>
+
+<nz-dropdown-menu #nodeActionsMenu="nzDropdownMenu">
+  <ul *ngIf="actionNode as node" nz-menu>
+    <li nz-menu-item [nzSelected]="false">
+      <span>{{ node.name }}</span>
+    </li>
+    <li nz-menu-divider></li>
+    <li nz-menu-item (click)="form(undefined, node._id)"> 新增 </li>
+    <li nz-menu-item (click)="form(node)"> 编辑 </li>
+    <li nz-menu-item nzDanger (click)="delete(node)"> 删除 </li>
+  </ul>
+</nz-dropdown-menu>
+
+<nz-drawer
+  nzTitle="拖拽进行重组"
+  [nzVisible]="reorganizationVisible"
+  [nzFooter]="reorganizationFooter"
+  (nzOnClose)="closeReorganization()"
+>
   <ng-container *nzDrawerContent>
     <nz-tree
       nzBlockNode
@@ -75,3 +101,12 @@
     </nz-tree>
   </ng-container>
 </nz-drawer>
+
+<ng-template #reorganizationFooter>
+  <nz-space style="float: right">
+    <button *nzSpaceItem nz-button (click)="getReorganizationNodes()">重置</button>
+    <button *nzSpaceItem nz-button nzType="primary" [disabled]="!reorganizationNode" (click)="submitReorganization()">
+      更新
+    </button>
+  </nz-space>
+</ng-template>
