UPDATE: Load Script

--- a/src/dev/dev.component.html
+++ b/src/dev/dev.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="main">
   <nz-header>
-    <button nz-button nzType="text">
+    <button nz-button nzType="text" routerLink="/">
       <span nz-icon nzType="arrow-left"></span>
       返回应用
     </button>
