--- a/src/dev/dev.component.html
+++ b/src/dev/dev.component.html
@@ -11,6 +11,7 @@
         <li nz-menu-group nzTitle="插件">
           <ul>
             <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'richtext']">块编辑器</li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'store']">本地存储</li>
           </ul>
         </li>
       </ul>
