--- a/src/dev/dev.component.html
+++ b/src/dev/dev.component.html
@@ -12,6 +12,7 @@
           <ul>
             <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'richtext']">块编辑器</li>
             <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'store']">本地存储</li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'table']">动态表格</li>
           </ul>
         </li>
       </ul>
