--- a/src/common/projects/projects.component.html
+++ b/src/common/projects/projects.component.html
@@ -16,15 +16,7 @@
   <button nz-button nzType="primary" (click)="form()"> 新增 </button>
 </ng-template>
 
-<ng-template #footer>
-  <nz-pagination
-    nzShowSizeChanger
-    nzResponsive
-    [nzPageIndex]="data.page"
-    [nzTotal]="data.total"
-    [nzPageSize]="data.pagesize"
-  ></nz-pagination>
-</ng-template>
+<ng-template #footer> </ng-template>
 
 <nz-drawer
   [nzTitle]="title"
