--- a/src/common/header/header.component.html
+++ b/src/common/header/header.component.html
@@ -16,10 +16,10 @@
     <nz-col><ng-content></ng-content></nz-col>
     <nz-col>
       <nz-space>
-        <button *nzSpaceItem nz-button nzType="text">
-          <span nz-icon nzType="translation"></span>
-          简体中文
-        </button>
+        <!--        <button *nzSpaceItem nz-button nzType="text">-->
+        <!--          <span nz-icon nzType="deployment-unit"></span>-->
+        <!--          部署发布-->
+        <!--        </button>-->
         <div *nzSpaceItem class="center" nz-popover [nzPopoverContent]="center" nzPopoverPlacement="bottomRight">
           <ng-container *ngIf="!!app.user">
             <nz-badge nzDot>
@@ -43,7 +43,10 @@
             <nz-tabset style="width: 360px" [nzTabBarExtraContent]="actions">
               <ng-template #actions>
                 <nz-space>
-                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心" [routerLink]="['/center']">
+                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="简体中文">
+                    <i nz-icon nzType="translation"></i>
+                  </button>
+                  <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心">
                     <i nz-icon nzType="user"></i>
                   </button>
                   <button *nzSpaceItem nz-button nzType="text" nz-tooltip="退出" (click)="logout()">
