--- a/src/common/header/header.component.html
+++ b/src/common/header/header.component.html
@@ -1,19 +1,21 @@
 <nz-header>
   <nz-row nzJustify="space-between">
     <nz-col>
-      <ng-template #spaceSplit>
-        <nz-divider nzType="vertical"></nz-divider>
-      </ng-template>
-      <nz-space [nzSplit]="spaceSplit">
-        <app-projects *nzSpaceItem></app-projects>
+      <nz-space [nzSplit]="split">
+        <ng-template #split>
+          <nz-divider nzType="vertical"></nz-divider>
+        </ng-template>
+        <button *nzSpaceItem nz-button nzType="text"> <span nz-icon nzType="appstore"></span> </button>
         <nz-breadcrumb *nzSpaceItem nzAutoGenerate>
           <nz-breadcrumb-item>
-            <a [routerLink]="['/']"><span nz-icon nzType="home"></span> 首页</a>
+            <a [routerLink]="['/']"> 首页 </a>
           </nz-breadcrumb-item>
         </nz-breadcrumb>
       </nz-space>
     </nz-col>
-    <nz-col><ng-content></ng-content></nz-col>
+    <nz-col>
+      <ng-content></ng-content>
+    </nz-col>
     <nz-col>
       <nz-space>
         <!--        <button *nzSpaceItem nz-button nzType="text">-->
