--- a/src/app/namespace/overview/functions/platform/platform.component.html
+++ b/src/app/namespace/overview/functions/platform/platform.component.html
@@ -82,6 +82,12 @@
       <input nz-input formControlName="feishu_verification_token" />
     </nz-form-control>
   </nz-form-item>
+  <nz-form-item>
+    <nz-form-label>免登授权码跳转地址</nz-form-label>
+    <nz-form-control nzHasFeedback>
+      <input nz-input formControlName="redirect_url" />
+    </nz-form-control>
+  </nz-form-item>
 </form>
 
 <div *nzModalFooter>
