--- a/src/app/namespace/overview/overview.component.html
+++ b/src/app/namespace/overview/overview.component.html
@@ -3,22 +3,25 @@
     <ul *ngIf="app.project as p" nz-menu nzMode="inline">
       <li nz-menu-group nzTitle="全局配置">
         <ul>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'cluster']"> 状态 </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'cloud']"> 公有云 </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'cluster']">
+            <span nz-icon nzType="cluster"></span> <span>集群状态</span>
+          </li>
+          <!--          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'cloud']">-->
+          <!--            <span nz-icon nzType="cloud"></span> <span>公有云</span>-->
+          <!--          </li>-->
+          <!--          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'office']">-->
+          <!--            <span nz-icon nzType="coffee"></span>-->
+          <!--            <span>企业平台</span>-->
+          <!--          </li>-->
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'functions']">
+            <span nz-icon nzType="experiment"></span>
+            <span>功能模块</span>
+          </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'security']">
+            <span nz-icon nzType="safety-certificate"></span>
+            <span>安全策略</span>
+          </li>
         </ul>
-      </li>
-
-      <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'office']">
-        <span nz-icon nzType="coffee"></span>
-        企业平台
-      </li>
-      <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'functions']">
-        <span nz-icon nzType="experiment"></span>
-        功能模块
-      </li>
-      <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'security']">
-        <span nz-icon nzType="safety-certificate"></span>
-        安全策略
       </li>
     </ul>
   </nz-sider>
