--- a/src/app/namespace/media/storage/storage.component.html
+++ b/src/app/namespace/media/storage/storage.component.html
@@ -88,28 +88,28 @@
           </button>
         </nz-list-item-extra>
       </nz-list-item>
-      <nz-list-item>
-        <nz-list-item-meta>
-          <nz-list-item-meta-title><b>消息队列</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description> 使用腾讯云 TDMQ Plusar 作用事务补偿 </nz-list-item-meta-description>
-        </nz-list-item-meta>
-        <nz-list-item-extra>
-          <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
-            <i nz-icon nzType="tool"></i>
-          </button>
-        </nz-list-item-extra>
-      </nz-list-item>
-      <nz-list-item>
-        <nz-list-item-meta>
-          <nz-list-item-meta-title><b>日志服务</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description> 使用腾讯云 CLS 日志服务收集日志 </nz-list-item-meta-description>
-        </nz-list-item-meta>
-        <nz-list-item-extra>
-          <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>
-            <i nz-icon nzType="tool"></i>
-          </button>
-        </nz-list-item-extra>
-      </nz-list-item>
+      <!--      <nz-list-item>-->
+      <!--        <nz-list-item-meta>-->
+      <!--          <nz-list-item-meta-title><b>消息队列</b></nz-list-item-meta-title>-->
+      <!--          <nz-list-item-meta-description> 使用腾讯云 TDMQ Plusar 作用事务补偿 </nz-list-item-meta-description>-->
+      <!--        </nz-list-item-meta>-->
+      <!--        <nz-list-item-extra>-->
+      <!--          <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>-->
+      <!--            <i nz-icon nzType="tool"></i>-->
+      <!--          </button>-->
+      <!--        </nz-list-item-extra>-->
+      <!--      </nz-list-item>-->
+      <!--      <nz-list-item>-->
+      <!--        <nz-list-item-meta>-->
+      <!--          <nz-list-item-meta-title><b>日志服务</b></nz-list-item-meta-title>-->
+      <!--          <nz-list-item-meta-description> 使用腾讯云 CLS 日志服务收集日志 </nz-list-item-meta-description>-->
+      <!--        </nz-list-item-meta>-->
+      <!--        <nz-list-item-extra>-->
+      <!--          <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" disabled>-->
+      <!--            <i nz-icon nzType="tool"></i>-->
+      <!--          </button>-->
+      <!--        </nz-list-item-extra>-->
+      <!--      </nz-list-item>-->
     </nz-list>
   </nz-card>
 </nz-card>
