--- a/src/app/namespace/overview/overview.component.html
+++ b/src/app/namespace/overview/overview.component.html
@@ -17,6 +17,22 @@
           </li>
         </ul>
       </li>
+      <li nz-menu-group nzTitle="监控">
+        <ul>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'values']">
+            <span nz-icon nzType="control"></span>
+            <span>动态配置</span>
+          </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'sessions']">
+            <span nz-icon nzType="rocket"></span>
+            <span>在线会话</span>
+          </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'overview', 'audit']">
+            <span nz-icon nzType="file-protect"></span>
+            <span>审计日志</span>
+          </li>
+        </ul>
+      </li>
     </ul>
   </nz-sider>
 
