--- a/src/app/namespace/logsystem/logsystem.component.html
+++ b/src/app/namespace/logsystem/logsystem.component.html
@@ -1,26 +1,28 @@
-<nz-layout class="main">
-  <app-toolbar></app-toolbar>
-  <nz-layout>
-    <app-header *ngIf="app.project as v">
-      <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'logsystem', 'search']">
-          <span nz-icon nzType="file-search"></span>
-          查询
-        </li>
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'logsystem', 'collector']">
-          <span nz-icon nzType="tool"></span>
-          采集器
-        </li>
-        <li nz-menu-item nzMatchRouter>
-          <span nz-icon nzType="database"></span>
-          日志集
-        </li>
-      </ul>
-    </app-header>
-    <nz-layout class="frame">
-      <nz-content class="content">
-        <router-outlet></router-outlet>
-      </nz-content>
-    </nz-layout>
+<nz-layout class="nested" style="overflow: hidden">
+  <nz-sider nzWidth="200px" nzTheme="light">
+    <ul *ngIf="app.project as p" nz-menu nzMode="inline">
+      <li nz-menu-group nzTitle="配置">
+        <ul>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'logsystem', 'search']">
+            <span nz-icon nzType="file-search"></span>
+            <span>查询</span>
+          </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'logsystem', 'collector']">
+            <span nz-icon nzType="tool"></span>
+            <span>采集器</span>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <span nz-icon nzType="database"></span>
+            <span>日志集</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nz-sider>
+
+  <nz-layout style="overflow: auto">
+    <nz-content class="content">
+      <router-outlet></router-outlet>
+    </nz-content>
   </nz-layout>
 </nz-layout>
