--- a/src/app/namespace/schedules/schedules.component.html
+++ b/src/app/namespace/schedules/schedules.component.html
@@ -1,26 +1,28 @@
-<nz-layout class="main">
-  <app-toolbar></app-toolbar>
-  <nz-layout>
-    <app-header *ngIf="app.project as v">
-      <ul nz-menu nzMode="horizontal">
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'schedules', 'timing']">
-          <span nz-icon nzType="field-time"></span>
-          定时回调
-        </li>
-        <li nz-menu-item nzMatchRouter [routerLink]="['/', v.namespace, 'schedules', 'queue']">
-          <span nz-icon nzType="bars"></span>
-          队列回调
-        </li>
-        <li nz-menu-item nzMatchRouter>
-          <span nz-icon nzType="setting"></span>
-          服务设置
-        </li>
-      </ul>
-    </app-header>
-    <nz-layout class="frame">
-      <nz-content class="content">
-        <router-outlet></router-outlet>
-      </nz-content>
-    </nz-layout>
+<nz-layout class="nested" style="overflow: hidden">
+  <nz-sider nzWidth="200px" nzTheme="light">
+    <ul *ngIf="app.project as p" nz-menu nzMode="inline">
+      <li nz-menu-group nzTitle="任务调度">
+        <ul>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'schedules', 'timing']">
+            <span nz-icon nzType="field-time"></span>
+            <span>定时回调</span>
+          </li>
+          <li nz-menu-item nzMatchRouter [routerLink]="['/', p.namespace, 'schedules', 'queue']">
+            <span nz-icon nzType="bars"></span>
+            <span>队列回调</span>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <span nz-icon nzType="setting"></span>
+            <span>服务设置</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </nz-sider>
+
+  <nz-layout style="overflow: auto">
+    <nz-content class="content">
+      <router-outlet></router-outlet>
+    </nz-content>
   </nz-layout>
 </nz-layout>
