UPDATE: Change Dev to Experiment

--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -10,9 +10,9 @@
       <ul nz-menu nzMode="inline">
         <li nz-menu-group nzTitle="插件">
           <ul>
-            <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'richtext']">块编辑器</li>
-            <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'store']">本地存储</li>
-            <li nz-menu-item nzMatchRouter [routerLink]="['/_dev', 'table']">动态表格</li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['/exp', 'richtext']">块编辑器</li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['/exp', 'store']">本地存储</li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['/exp', 'table']">动态表格</li>
           </ul>
         </li>
       </ul>
