--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -12,7 +12,7 @@
             </button>
             <nz-dropdown-menu #menu="nzDropdownMenu">
               <ul nz-menu>
-                <li nz-submenu nzTitle="关注应用">
+                <li nz-submenu nzTitle="收藏应用">
                   <ul>
                     <li nz-menu-item>无</li>
                   </ul>
