UPDATE: Search Input

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -21,7 +21,7 @@
             <ul>
               <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'security']">登录设置</li>
               <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'sessions']">会话管理</li>
-              <li nz-menu-item>审计日志</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit']">审计日志</li>
             </ul>
           </li>
         </ul>
