--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,5 +1,4 @@
-nz-layout.frame {
-  padding-top: 45px;
-  overflow-x: hidden;
-  overflow-y: auto;
+nz-content {
+  padding: 8px;
+  overflow: auto;
 }
