--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="main">
   <app-header> </app-header>
-  <nz-layout style="padding-top: 45px; overflow-x: hidden; overflow-y: auto">
+  <nz-layout style="padding-top: 45px">
     <nz-sider nzWidth="200px" nzTheme="light">
       <ul nz-menu nzMode="inline">
         <ul>
@@ -28,9 +28,7 @@
       </ul>
     </nz-sider>
     <nz-content>
-      <div class="content">
-        <router-outlet></router-outlet>
-      </div>
+      <router-outlet></router-outlet>
     </nz-content>
   </nz-layout>
 </nz-layout>
