--- a/src/app/admin/projects/projects.component.html
+++ b/src/app/admin/projects/projects.component.html
@@ -23,7 +23,19 @@
 </ng-template>
 
 <nz-card [nzTitle]="searchRef" [nzExtra]="extraRef">
-  <nz-table #basicTable [nzData]="dataset.values">
+  <nz-table
+    #basicTable
+    [nzFrontPagination]="false"
+    [nzShowSizeChanger]="true"
+    [nzHideOnSinglePage]="true"
+    [nzLoading]="dataset.loading"
+    [nzData]="dataset.values"
+    [nzTotal]="dataset.total"
+    [(nzPageSize)]="dataset.pagesize"
+    [(nzPageIndex)]="dataset.page"
+    (nzPageIndexChange)="getData(false)"
+    (nzPageSizeChange)="getData(true)"
+  >
     <thead>
       <tr>
         <th nzWidth="60px" nzLeft nzAlign="center"> </th>
