--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,8 +7,7 @@
           <li nz-menu-group nzTitle="功能设置">
             <ul>
               <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'projects']">项目管理</li>
-              <li nz-menu-item nzDisabled>版本管理</li>
-              <li nz-menu-item nzDisabled>基础设施</li>
+              <li nz-menu-item nzDisabled>共享设施</li>
             </ul>
           </li>
           <li nz-menu-group nzTitle="团队设置">
@@ -17,11 +16,16 @@
               <li nz-menu-item nzDisabled>权限管理</li>
             </ul>
           </li>
-          <li nz-menu-group nzTitle="安全性">
+          <li nz-menu-group nzTitle="审计日志">
             <ul>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'security']">登录设置</li>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'sessions']">会话管理</li>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit']">审计日志</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit', 'access_logs']">操作记录</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'audit', 'login_logs']">登录记录</li>
+            </ul>
+          </li>
+          <li nz-menu-group nzTitle="系统设置">
+            <ul>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'sessions']">活跃会话</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'settings', 'security']">安全性</li>
             </ul>
           </li>
         </ul>
