UPDATE: Admin Module

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,13 +6,13 @@
         <ul>
           <li nz-menu-group nzTitle="功能设置">
             <ul>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'projects']">项目管理</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'function', 'projects']">项目管理</li>
               <li nz-menu-item nzDisabled>共享设施</li>
             </ul>
           </li>
           <li nz-menu-group nzTitle="团队设置">
             <ul>
-              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'users']">成员管理</li>
+              <li nz-menu-item nzMatchRouter [routerLink]="['/', 'admin', 'team', 'users']">成员管理</li>
               <li nz-menu-item nzDisabled>权限管理</li>
             </ul>
           </li>
