--- a/src/app/admin/audit/access-logs/access-logs.component.html
+++ b/src/app/admin/audit/access-logs/access-logs.component.html
@@ -14,13 +14,9 @@
   >
     <thead>
       <tr>
-        <th nzWidth="60px" nzLeft nzAlign="center">
-          <button nz-button nzType="text" nzBlock nz-tooltip="行号">
-            <span nz-icon nzType="field-number"></span>
-          </button>
-        </th>
+        <th nzWidth="60px" nzLeft nzAlign="center"> </th>
         <th nzWidth="240px"><b>日志时间</b></th>
-        <th nzWidth="600px"><b>元数据</b></th>
+        <th nzWidth="600px"><b>操作者</b></th>
         <th><b>日志数据</b></th>
       </tr>
     </thead>
