--- a/src/app/admin/audit/access-logs/access-logs.component.html
+++ b/src/app/admin/audit/access-logs/access-logs.component.html
@@ -14,39 +14,64 @@
   >
     <thead>
       <tr>
-        <th nzWidth="60px" nzLeft nzAlign="center"> </th>
-        <th nzWidth="240px"><b>日志时间</b></th>
-        <th nzWidth="600px"><b>操作者</b></th>
-        <th><b>日志数据</b></th>
+        <th
+          nzWidth="60px"
+          nzLeft
+          nzAlign="center"
+          [nzChecked]="dataset.checked"
+          [nzIndeterminate]="dataset.indeterminate"
+          (nzCheckedChange)="dataset.setNChecked($event)"
+        >
+        </th>
+        <th nzWidth="270px"><b>操作时间</b></th>
+        <th nzWidth="320px"><b>操作者</b></th>
+        <th><b>资源请求</b></th>
+        <th><b>事件备注</b></th>
+        <th nzWidth="60px" nzRight nzAlign="center">
+          <button nz-button nzType="text" nzBlock disabled>
+            <i nz-icon nzType="setting"></i>
+          </button>
+        </th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngFor="let data of basicTable.data">
         <tr>
-          <td>
-            <button nz-button nzType="text" nzBlock>
-              <span nz-icon nzType="copy"></span>
+          <td
+            nzLeft
+            nzAlign="center"
+            [nzDisabled]="data['disabled']"
+            [nzChecked]="dataset.checkedIds.has(data['_id'])"
+            (nzCheckedChange)="dataset.setChecked(data['_id'], $event)"
+          >
+          </td>
+          <td [nzExpand]="expand.has(data['_id'])" (nzExpandChange)="expandChange(data['_id'], $event)">
+            {{ data['timestamp'] }}
+          </td>
+          <td>{{ data.metadata.user_id }}</td>
+          <td>{{ data.metadata.method }} {{ data.metadata.path }}</td>
+          <td>无</td>
+          <td nzRight nzAlign="center">
+            <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="menu">
+              <i nz-icon nzType="ellipsis"></i>
             </button>
+            <nz-dropdown-menu #menu="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item>设置备注</li>
+              </ul>
+            </nz-dropdown-menu>
           </td>
-          <td>{{ data['timestamp'] }}</td>
-          <td>
-            <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-              <nz-descriptions-item nzTitle="HOST" [nzSpan]="2">{{ data.metadata.host }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="METHOD">{{ data.metadata.method }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="PATH">{{ data.metadata.path }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="IP">{{ data.metadata.ip }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="USER_ID">{{ data.metadata.user_id }}</nz-descriptions-item>
-            </nz-descriptions>
-          </td>
-          <td>
-            <nz-descriptions nzSize="small" nzBordered [nzColumn]="2">
-              <nz-descriptions-item nzTitle="COST">{{ data.data.cost }}ms</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="STATUS">{{ data.data.status }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="QUERY" [nzSpan]="2">{{ data.data.query }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="BODY" [nzSpan]="2">{{ data.data.body }}</nz-descriptions-item>
-              <nz-descriptions-item nzTitle="USER_AGENT" [nzSpan]="2">{{ data.data.user_agent }}</nz-descriptions-item>
-            </nz-descriptions>
-          </td>
+        </tr>
+        <tr [nzExpand]="expand.has(data['_id'])">
+          <nz-descriptions nzTitle="日志数据" nzSize="small" [nzColumn]="2">
+            <nz-descriptions-item nzTitle="HOST">{{ data.metadata.host }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="COST">{{ data.data.cost }}ms</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="IP">{{ data.metadata.ip }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="STATUS">{{ data.data.status }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="QUERY" [nzSpan]="2">{{ data.data.query }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="BODY" [nzSpan]="2">{{ data.data.body }}</nz-descriptions-item>
+            <nz-descriptions-item nzTitle="USER_AGENT" [nzSpan]="2">{{ data.data.user_agent }}</nz-descriptions-item>
+          </nz-descriptions>
         </tr>
       </ng-container>
     </tbody>
